--- a/Fitness Solutions/Combinded Solutions (Master)/Combinded Solutions.tex
+++ b/Fitness Solutions/Combinded Solutions (Master)/Combinded Solutions.tex
@@ -75,6 +75,8 @@
 \titleformat{\subsection}[hang]{\large\scshape\bfseries}{\thesubsection}{1em}{}			% Creates subsection titles
 \titleformat{\subsubsection}[hang]{\large\scshape\bfseries}{\thesubsection}{1em}{}			% Creates subsection titles
 
+\titleformat{\subsubsubsection}[hang]{\large\scshape\bfseries}{\thesubsection}{1em}{}			% Creates subsection titles
+
 \usepackage{kpfonts}								    					% This font allows you to use both bold and scshape
 
 \setcounter{tocdepth}{4}
