--- a/Fitness Solutions/Combinded Solutions (Master)/references.bib
+++ b/Fitness Solutions/Combinded Solutions (Master)/references.bib
@@ -1,3 +1,50 @@
+@incollection {survey,
+    AUTHOR = {Abramovich, Dan},
+     TITLE = {Moduli of algebraic and tropical curves},
+ BOOKTITLE = {Colloquium de {G}iorgi 2010--2012},
+    SERIES = {Colloquia},
+    VOLUME = {4},
+     PAGES = {35--47},
+ PUBLISHER = {Ed. Norm., Pisa},
+      YEAR = {2013},
+   MRCLASS = {14H10 (14G22 14T05)},
+  MRNUMBER = {3089026},
+       DOI = {10.1007/978-88-7642-457-1_4},
+       URL = {http://dx.doi.org/10.1007/978-88-7642-457-1_4},
+}
+
+@article {chan,
+    AUTHOR = {Chan, Melody},
+     TITLE = {Tropical hyperelliptic curves},
+   JOURNAL = {J. Algebraic Combin.},
+  FJOURNAL = {Journal of Algebraic Combinatorics. An International Journal},
+    VOLUME = {37},
+      YEAR = {2013},
+    NUMBER = {2},
+     PAGES = {331--359},
+      ISSN = {0925-9899},
+     CODEN = {JAOME7},
+   MRCLASS = {14T05 (05C10 14H45)},
+  MRNUMBER = {3011346},
+MRREVIEWER = {Siu-Cheong Lau},
+       DOI = {10.1007/s10801-012-0369-x},
+       URL = {http://dx.doi.org/10.1007/s10801-012-0369-x},
+}
+
+@book {harris,
+    AUTHOR = {Harris, Joe and Morrison, Ian},
+     TITLE = {Moduli of curves},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {187},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {1998},
+     PAGES = {xiv+366},
+      ISBN = {0-387-98438-0; 0-387-98429-1},
+   MRCLASS = {14H10 (14-02 14D20 14D22)},
+  MRNUMBER = {1631825},
+MRREVIEWER = {R. F. Lax},
+}
+
 @book{hartshorne-1977,
 	address = {New York},
 	title = {Algebraic Geometry},
@@ -8,6 +55,37 @@
 	year = {1977}
 }
 
+@article {masters,
+    AUTHOR = {Paul Alexander Helminick},
+     TITLE = {Tropical Igusa Invariants and Torision Embeddings},
+  }
+  
+@article {igusa,
+    AUTHOR = {Igusa, Jun-ichi},
+     TITLE = {Arithmetic variety of moduli for genus two},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {72},
+      YEAR = {1960},
+     PAGES = {612--649},
+      ISSN = {0003-486X},
+   MRCLASS = {14.00},
+  MRNUMBER = {0114819},
+MRREVIEWER = {I. Barsotti},
+}
+
+@book {tropicalbook,
+    AUTHOR = {Maclagan, Diane and Sturmfels, Bernd},
+     TITLE = {Introduction to tropical geometry},
+    SERIES = {Graduate Studies in Mathematics},
+    VOLUME = {161},
+ PUBLISHER = {American Mathematical Society, Providence, RI},
+      YEAR = {2015},
+     PAGES = {xii+363},
+      ISBN = {978-0-8218-5198-2},
+   MRCLASS = {14T05 (05B35 15A80 52B70)},
+  MRNUMBER = {3287221},
+}
 
 @book{matsumura-1989,
 	title = {Commutative Ring Theory},
@@ -17,4 +95,38 @@
 	translator = {Reid, Miles},
 	month = jun,
 	year = {1989}
+}
+  
+@article {payne,
+    AUTHOR = {Payne, Sam},
+     TITLE = {Analytification is the limit of all tropicalizations},
+   JOURNAL = {Math. Res. Lett.},
+  FJOURNAL = {Mathematical Research Letters},
+    VOLUME = {16},
+      YEAR = {2009},
+    NUMBER = {3},
+     PAGES = {543--556},
+      ISSN = {1073-2780},
+   MRCLASS = {14T05 (14G22)},
+  MRNUMBER = {2511632},
+MRREVIEWER = {Joaquim Ro{\'e}},
+       DOI = {10.4310/MRL.2009.v16.n3.a13},
+       URL = {http://dx.doi.org/10.4310/MRL.2009.v16.n3.a13},
+}
+
+@article {section5,
+    AUTHOR = {Ren, Qingchun and Sam, Steven V. and Sturmfels, Bernd},
+     TITLE = {Tropicalization of classical moduli spaces},
+   JOURNAL = {Math. Comput. Sci.},
+  FJOURNAL = {Mathematics in Computer Science},
+    VOLUME = {8},
+      YEAR = {2014},
+    NUMBER = {2},
+     PAGES = {119--145},
+      ISSN = {1661-8270},
+   MRCLASS = {14D20 (14T05)},
+  MRNUMBER = {3224624},
+MRREVIEWER = {Amin Gholampour},
+       DOI = {10.1007/s11786-014-0185-x},
+       URL = {http://dx.doi.org/10.1007/s11786-014-0185-x},
 }
