--- a/Group Writings/27 Lines on A Cubic/Solution to Exercise/Solution to Exercise.tex
+++ b/Group Writings/27 Lines on A Cubic/Solution to Exercise/Solution to Exercise.tex
@@ -325,7 +325,7 @@ Similarly, we know that the line $\ell_{i,j}$ and the conic $C_{k}$ intersect in
 Finally, by a similar line of reasoning one can see that:
 \[
 E_i\cap E_j=\o, \quad\quad E_i\cap \ell_{j,k}=\begin{cases} \{*\} &\mbox{if } i\in \{j,k\} \\ 
-\o & \mbox{else }  \end{cases} \quad \quad, \text{and} \quad \quad E_i\cap C_j=\begin{cases} \{*\} &\mbox{if } i\neq j \\ 
+\o & \mbox{else }  \end{cases}, \quad \quad \text{and} \quad \quad E_i\cap C_j=\begin{cases} \{*\} &\mbox{if } i\neq j \\ 
 \o & \mbox{else }  \end{cases}.
 \]
 
