Added Solution to Ex. 9 of Surfaces (given by Kastler)
Added Solution to Ex. 9 of Surfaces (given by Kastler). Also created a
folder for all the raw files people send me.

--- a/Fitness Solutions/Combinded Solutions (Master)/Combinded Solutions.tex
+++ b/Fitness Solutions/Combinded Solutions (Master)/Combinded Solutions.tex
@@ -345,6 +345,9 @@
 \DeclareMathOperator{\Spec}{\operatorname{Spec}}							% Spectrum
 \DeclareMathOperator{\mSpec}{\operatorname{maxSpec}}					% Maximal Spectrum
 \DeclareMathOperator{\Rad}{\operatorname{Rad}}							% Radical of Ideal
+\DeclareMathOperator{\ch}{ch}
+\DeclareMathOperator{\td}{td}
+\DeclareMathOperator{\Pic}{Pic}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Category Theory %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -436,6 +439,8 @@
 \input{../Curves/ex-3-david-j-bruce}
 
 \section{Wednesday, August 24, 2016 - Surfaces}
+
+\input{../Surfaces/ex-9-kastner}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printindex	 %Prints Index [Typeset LaTeX, Typeset MakeIndex, Typeset LaTeX x3]
