Added Curves Ex 9

--- a/Fitness Solutions/Combinded Solutions (Master)/Combinded Solutions.tex
+++ b/Fitness Solutions/Combinded Solutions (Master)/Combinded Solutions.tex
@@ -438,6 +438,8 @@
 
 \input{../Curves/ex-3-david-j-bruce}
 
+\input{../Curves/ex-6-alessandro-oneto}
+
 \section{Wednesday, August 24, 2016 - Surfaces}
 
 \input{../Surfaces/ex-9-kastner}
