--- a/Fitness Solutions/Combinded Solutions (Master)/references.bib
+++ b/Fitness Solutions/Combinded Solutions (Master)/references.bib
@@ -13,6 +13,17 @@
        URL = {http://dx.doi.org/10.1007/978-88-7642-457-1_4},
 }
 
+@article{bianchi-1880,
+  title={Ueber die Normalformen dritter und f{\"u}nfter Stufe des elliptischen Integrals erster Gattung},
+  author={Bianchi, Luigi},
+  journal={Mathematische Annalen},
+  volume={17},
+  number={2},
+  pages={234--262},
+  year={1880},
+  publisher={Springer}
+}
+
 @article {chan,
     AUTHOR = {Chan, Melody},
      TITLE = {Tropical hyperelliptic curves},
@@ -29,6 +40,14 @@
 MRREVIEWER = {Siu-Cheong Lau},
        DOI = {10.1007/s10801-012-0369-x},
        URL = {http://dx.doi.org/10.1007/s10801-012-0369-x},
+}
+
+@Book{harris-1992,
+  Title                    = {Algebraic geometry: a first course},
+  Author                   = {Harris, Joe},
+  Publisher                = {Springer},
+  Year                     = {1992},
+  Volume                   = {133}
 }
 
 @book {harris,
